@startuml

title __GRAPHICELEMENTS's Class Diagram__\n

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.Board {
            ~ display : JLabel[][]
            + Board()
            + update()
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.BoardG {
            - MAIN_HUD_HEIGHT : int
            - MAIN_HUD_WIDTH : int
            - MAIN_HUD_X : int
            - PANEL_HEIGHT : int
            - PANEL_WIDTH : int
            - background : Image
            - backgroundX : int
            - backgroundXVelocity : int
            - backgroundY : int
            - backgroundYVelocity : int
            - bagImage : Image
            - bandit1Image : Image
            - bandit2Image : Image
            - coinImage : Image
            - font : Font
            - gunImage : Image
            - jewelImage : Image
            - marshalImage : Image
            - railways : Image
            - railwaysX : int
            - railwaysXVelocity : int
            - startScreen : boolean
            - trainImage : Image
            - treasureImage : Image
            + BoardG()
            + paint()
            + update()
            - drawBackground()
            - drawEntities()
            - drawHUD()
            - updateXAnimation()
            - updateYAnimation()
        }
      }
    }
  }
  

  namespace main {
    namespace graphics {
      namespace graphicElements {
        class main.graphics.graphicElements.Buttons {
            - action : JButton
            - down : JButton
            - left : JButton
            - right : JButton
            - rob : JButton
            - shootDown : JButton
            - shootLeft : JButton
            - shootRight : JButton
            - shootUp : JButton
            - up : JButton
            + Buttons()
            + disableActionButton()
            + disableActionsButtons()
            + enableActionButton()
            + enableActionsButtons()
        }
      }
    }
  }
  

  main.graphics.graphicElements.Board -up-|> javax.swing.JPanel
  main.graphics.graphicElements.Board o-- main.engine.gameElements.Train : train
  main.graphics.graphicElements.BoardG -up-|> javax.swing.JPanel
  main.graphics.graphicElements.BoardG o-- main.engine.GameEngine : gameEngine
  main.graphics.graphicElements.BoardG o-- main.engine.gameElements.Train : train
  main.graphics.graphicElements.Buttons -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
